Add download ota package method
