# routes/otaApi.js
@@ -2,8 +2,9 @@ var express = require('express');
 const otaApiController = require('../controllers/otaApiController');
 var router = express.Router();
 
-const { getOtaPackageInfo } = otaApiController;
+const { getOtaPackageInfo, downloadOtaPackage } = otaApiController;
 
-router.get('/packages', getOtaPackageInfo)
+router.get('/packages', getOtaPackageInfo);
+router.get('/download', downloadOtaPackage);
 
 module.exports = router
